# kinematic_chains

./: CMakeLists.txt  package.xml
config/: kinematic_chains.rviz
config/urdf/: arm.urdf  tool.urdf  tool1.urdf  tool2.urdf
include/kinematic_chains/: kinematic_chains.hpp  manipulator.hpp
kinematic_chains/include/kinematic_chains/: kinematic_chains.hpp  manipulator.hpp
kinematic_chains/scripts/: example_client
kinematic_chains/src/: kinematic_chains.cpp  main.cpp  manipulator.cpp
kinematic_chains/srv/: CalculateIK.srv  ChangeEffectorDescription.srv
launch/: demo_launch.launch
node/: CMakeLists.txt  package.xml
node/include/node/: kinematic_chain_handler.hpp  manipulator.hpp  node.hpp
node/scripts/: example_client
node/src/: kinematic_chain_handler.cpp  main.cpp  manipulator.cpp  node.cpp  node.cpp.autosave
node/urdf/: arm.urdf
scripts/: demo_client
src/: kinematic_chains.cpp  main.cpp  manipulator.cpp
srv/: InitJoints.srv
